--- a/src/styles/_varibles.scss
+++ b/src/styles/_varibles.scss
@@ -18,7 +18,7 @@
 	--card-font-size: 24px;
 
 	--transition-duration: 0.2s;
-	--turn-duration: 1.5s;
+	--turn-duration: 1.8s;
 
 	--main-font-color: #0b0a0a;
 	--main-bgrd-color: #c78d68;
